# AI-Autonomous-QA

./: .env.example  .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tsconfig.base.json  tsconfig.json
apps/api/: pyproject.toml
apps/api/aqa_api/: config.py  deps.py  main.py
apps/api/aqa_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/aqa_api/routers/: apps.py  dashboard.py  health.py  metrics.py  pipeline_runs.py  queues.py  runs.py  test_cases.py
apps/api/aqa_api/schemas/: __init__.py  appmap.py  appmap_approval.py  appmap_diff.py  apps.py  dashboard.py  discovery_summary.py  errors.py  execute.py  generate_tests.py  pipeline_runs.py  runs.py  sse.py  test_area_decisions.py  test_cases.py
apps/api/aqa_api/services/: api_coverage.py  applications.py  appmap.py  appmap_approval.py  appmap_diff.py  artifacts.py  celery_enqueue.py  dashboard.py  discovery_summary.py  pipeline_runs.py  sse.py  test_area_decisions.py  test_cases.py  test_execution.py  test_generation.py
workers/celery_app/: pyproject.toml  requirements.txt
workers/celery_app/aqa_celery/: __init__.py  agent_runner.py  app.py  config.py  task_names.py
workers/celery_app/aqa_celery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workers/celery_app/aqa_celery/tasks/: __init__.py
workers/discovery_worker/: pyproject.toml
workers/discovery_worker/aqa_discovery/: __init__.py  api_types.py  auth.py  auth_intelligence.py  crawl_settings.py  crawler.py  extractors.py  forms.py  interaction_safety.py  network_capture.py  openapi_import.py  page_capture.py  page_fingerprint.py  persist.py  robots.py  safety.py  spa_routes.py  spa_views.py  state_frontier.py  types.py  url_utils.py  worker.py
workers/discovery_worker/aqa_discovery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workers/discovery_worker/aqa_discovery/cic/: __init__.py  executor.py  fingerprint.py  planner.py  recovery.py  replay.py  scope.py  session.py  (+1 more)
workers/discovery_worker/tests/: test_cic_phase1.py  test_cic_phase2.py  test_cic_phase3.py  test_cic_phase4.py  test_spa_views.py
workers/playwright-executor/: pyproject.toml
workers/playwright-executor/aqa_executor/: __init__.py  runner.py  step_handlers.py
workers/playwright-executor/aqa_executor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+176 files in other folders)
