[project]
name = "aqa-api"
version = "0.1.0"
description = "FastAPI orchestration API for Autonomous QA Platform"
requires-python = ">=3.11"
dependencies = [
  "aqa-shared",
  "aqa-celery",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "redis>=5,<6",
  "python-dotenv>=1.0,<2",
  "psycopg2-binary>=2.9,<3",
  "pydantic-settings>=2.0,<3",
  "prometheus-client>=0.21,<1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aqa_api*"]
