[project]
name = "aqa-discovery"
version = "0.1.0"
description = "Playwright-based discovery worker for Autonomous QA Platform"
requires-python = ">=3.11"
dependencies = [
  "aqa-shared",
  "httpx>=0.27,<1",
  "playwright>=1.40,<2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aqa_discovery*"]
